Test String hashing across JVM access modes